--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".frmMaestros"></activity>
+        <activity android:name=".frmEvaluarCliente"></activity>
+        <activity android:name=".frmBuscarCliente" />
+        <activity android:name=".frmMaestros" />
         <activity
             android:name=".MainUserActivity"
             android:label="@string/title_activity_main_user"
