--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.grupoc.cubikate">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality.
+    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <meta-data
         android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version" />
     <meta-data
         android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyCYtTr30L0AZ6_6sbnPDNzgizc7vMIrFXk" />
-
-
+        android:value="AIzaSyBjulDj8Q7tNnDsIqI6YKVxlr9-wK8QsSA" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +24,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".frmEvaluarCliente"></activity>
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".vMapsMaestros"
+            android:label="@string/title_activity_v_maps_maestros"></activity>
+        <activity android:name=".frmEvaluarCliente" />
         <activity android:name=".frmBuscarCliente" />
         <activity android:name=".frmMaestros" />
         <activity
