--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:value="@integer/google_play_services_version" />
     <meta-data
         android:name="com.google.android.maps.v2.API_KEY"
-        android:value="" />
+        android:value="AIzaSyBjulDj8Q7tNnDsIqI6YKVxlr9-wK8QsSA" />
 
     <application
         android:allowBackup="true"
