--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.grupoc.cubikate">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -26,7 +25,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-
+        <activity android:name=".UserActivity_frmMaestrosCercanos"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -41,7 +40,7 @@
 
         <activity
             android:name=".vMapsMaestros"
-            android:label="@string/title_activity_v_maps_maestros"></activity>
+            android:label="@string/title_activity_v_maps_maestros" />
         <activity android:name=".frmEvaluarCliente" />
         <activity android:name=".frmBuscarCliente" />
         <activity android:name=".frmMaestros" />
